XPathWebApi/dab.Xpath.Query/htmlapiParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.7
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from htmlapi.g4 by ANTLR 4.7

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.7")]
[System.CLSCompliant(false)]
public partial class htmlapiParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, VALUE_STRING=7, SELECT=8, 
		FROM=9, WHERE=10, TOP=11, INTEGER=12, AS=13, SORT=14, SORT_TYPE=15, GROUP=16, 
		COMPARE_OPERATORS=17, LOGIC_OPERATIONS=18, WS=19;
	public const int
		RULE_query = 0, RULE_singleQuery = 1, RULE_columnIdentifier = 2, RULE_whereFilter = 3, 
		RULE_whereBody = 4, RULE_sortFilter = 5;
	public static readonly string[] ruleNames = {
		"query", "singleQuery", "columnIdentifier", "whereFilter", "whereBody", 
		"sortFilter"
	};

	private static readonly string[] _LiteralNames = {
		null, "','", "'*'", "';'", "'.'", "'('", "')'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, "VALUE_STRING", "SELECT", "FROM", 
		"WHERE", "TOP", "INTEGER", "AS", "SORT", "SORT_TYPE", "GROUP", "COMPARE_OPERATORS", 
		"LOGIC_OPERATIONS", "WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "htmlapi.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static htmlapiParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public htmlapiParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public htmlapiParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}
	public partial class QueryContext : ParserRuleContext {
		public SingleQueryContext[] singleQuery() {
			return GetRuleContexts<SingleQueryContext>();
		}
		public SingleQueryContext singleQuery(int i) {
			return GetRuleContext<SingleQueryContext>(i);
		}
		public QueryContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_query; } }
		public override void EnterRule(IParseTreeListener listener) {
			IhtmlapiListener typedListener = listener as IhtmlapiListener;
			if (typedListener != null) typedListener.EnterQuery(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IhtmlapiListener typedListener = listener as IhtmlapiListener;
			if (typedListener != null) typedListener.ExitQuery(this);
		}
	}

	[RuleVersion(0)]
	public QueryContext query() {
		QueryContext _localctx = new QueryContext(Context, State);
		EnterRule(_localctx, 0, RULE_query);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 13;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 12; singleQuery();
				}
				}
				State = 15;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==SELECT );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SingleQueryContext : ParserRuleContext {
		public ITerminalNode SELECT() { return GetToken(htmlapiParser.SELECT, 0); }
		public ITerminalNode FROM() { return GetToken(htmlapiParser.FROM, 0); }
		public ColumnIdentifierContext[] columnIdentifier() {
			return GetRuleContexts<ColumnIdentifierContext>();
		}
		public ColumnIdentifierContext columnIdentifier(int i) {
			return GetRuleContext<ColumnIdentifierContext>(i);
		}
		public ITerminalNode TOP() { return GetToken(htmlapiParser.TOP, 0); }
		public ITerminalNode INTEGER() { return GetToken(htmlapiParser.INTEGER, 0); }
		public WhereFilterContext whereFilter() {
			return GetRuleContext<WhereFilterContext>(0);
		}
		public SortFilterContext sortFilter() {
			return GetRuleContext<SortFilterContext>(0);
		}
		public SingleQueryContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_singleQuery; } }
		public override void EnterRule(IParseTreeListener listener) {
			IhtmlapiListener typedListener = listener as IhtmlapiListener;
			if (typedListener != null) typedListener.EnterSingleQuery(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IhtmlapiListener typedListener = listener as IhtmlapiListener;
			if (typedListener != null) typedListener.ExitSingleQuery(this);
		}
	}

	[RuleVersion(0)]
	public SingleQueryContext singleQuery() {
		SingleQueryContext _localctx = new SingleQueryContext(Context, State);
		EnterRule(_localctx, 2, RULE_singleQuery);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 17; Match(SELECT);
			State = 20;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==TOP) {
				{
				State = 18; Match(TOP);
				State = 19; Match(INTEGER);
				}
			}

			State = 31;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case VALUE_STRING:
				{
				State = 22; columnIdentifier();
				State = 27;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while (_la==T__0) {
					{
					{
					State = 23; Match(T__0);
					State = 24; columnIdentifier();
					}
					}
					State = 29;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				}
				break;
			case T__1:
				{
				State = 30; Match(T__1);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			State = 33; Match(FROM);
			State = 34; columnIdentifier();
			State = 36;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==WHERE) {
				{
				State = 35; whereFilter();
				}
			}

			State = 39;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==SORT) {
				{
				State = 38; sortFilter();
				}
			}

			State = 41; Match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ColumnIdentifierContext : ParserRuleContext {
		public ITerminalNode[] VALUE_STRING() { return GetTokens(htmlapiParser.VALUE_STRING); }
		public ITerminalNode VALUE_STRING(int i) {
			return GetToken(htmlapiParser.VALUE_STRING, i);
		}
		public ITerminalNode AS() { return GetToken(htmlapiParser.AS, 0); }
		public ColumnIdentifierContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_columnIdentifier; } }
		public override void EnterRule(IParseTreeListener listener) {
			IhtmlapiListener typedListener = listener as IhtmlapiListener;
			if (typedListener != null) typedListener.EnterColumnIdentifier(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IhtmlapiListener typedListener = listener as IhtmlapiListener;
			if (typedListener != null) typedListener.ExitColumnIdentifier(this);
		}
	}

	[RuleVersion(0)]
	public ColumnIdentifierContext columnIdentifier() {
		ColumnIdentifierContext _localctx = new ColumnIdentifierContext(Context, State);
		EnterRule(_localctx, 4, RULE_columnIdentifier);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 43; Match(VALUE_STRING);
			State = 48;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==T__3) {
				{
				{
				State = 44; Match(T__3);
				State = 45; Match(VALUE_STRING);
				}
				}
				State = 50;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 53;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==AS) {
				{
				State = 51; Match(AS);
				State = 52; Match(VALUE_STRING);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class WhereFilterContext : ParserRuleContext {
		public ITerminalNode WHERE() { return GetToken(htmlapiParser.WHERE, 0); }
		public WhereBodyContext whereBody() {
			return GetRuleContext<WhereBodyContext>(0);
		}
		public WhereFilterContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_whereFilter; } }
		public override void EnterRule(IParseTreeListener listener) {
			IhtmlapiListener typedListener = listener as IhtmlapiListener;
			if (typedListener != null) typedListener.EnterWhereFilter(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IhtmlapiListener typedListener = listener as IhtmlapiListener;
			if (typedListener != null) typedListener.ExitWhereFilter(this);
		}
	}

	[RuleVersion(0)]
	public WhereFilterContext whereFilter() {
		WhereFilterContext _localctx = new WhereFilterContext(Context, State);
		EnterRule(_localctx, 6, RULE_whereFilter);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 55; Match(WHERE);
			State = 56; whereBody();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class WhereBodyContext : ParserRuleContext {
		public WhereBodyContext whereBody() {
			return GetRuleContext<WhereBodyContext>(0);
		}
		public ColumnIdentifierContext[] columnIdentifier() {
			return GetRuleContexts<ColumnIdentifierContext>();
		}
		public ColumnIdentifierContext columnIdentifier(int i) {
			return GetRuleContext<ColumnIdentifierContext>(i);
		}
		public ITerminalNode COMPARE_OPERATORS() { return GetToken(htmlapiParser.COMPARE_OPERATORS, 0); }
		public ITerminalNode LOGIC_OPERATIONS() { return GetToken(htmlapiParser.LOGIC_OPERATIONS, 0); }
		public WhereBodyContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_whereBody; } }
		public override void EnterRule(IParseTreeListener listener) {
			IhtmlapiListener typedListener = listener as IhtmlapiListener;
			if (typedListener != null) typedListener.EnterWhereBody(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IhtmlapiListener typedListener = listener as IhtmlapiListener;
			if (typedListener != null) typedListener.ExitWhereBody(this);
		}
	}

	[RuleVersion(0)]
	public WhereBodyContext whereBody() {
		WhereBodyContext _localctx = new WhereBodyContext(Context, State);
		EnterRule(_localctx, 8, RULE_whereBody);
		int _la;
		try {
			State = 72;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__4:
				EnterOuterAlt(_localctx, 1);
				{
				State = 58; Match(T__4);
				State = 59; whereBody();
				State = 60; Match(T__5);
				}
				break;
			case VALUE_STRING:
				EnterOuterAlt(_localctx, 2);
				{
				State = 62; columnIdentifier();
				State = 63; Match(COMPARE_OPERATORS);
				State = 66;
				ErrorHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(TokenStream,8,Context) ) {
				case 1:
					{
					State = 64; columnIdentifier();
					}
					break;
				case 2:
					{
					State = 65; columnIdentifier();
					}
					break;
				}
				State = 70;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==LOGIC_OPERATIONS) {
					{
					State = 68; Match(LOGIC_OPERATIONS);
					State = 69; whereBody();
					}
				}

				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SortFilterContext : ParserRuleContext {
		public ITerminalNode SORT() { return GetToken(htmlapiParser.SORT, 0); }
		public ColumnIdentifierContext[] columnIdentifier() {
			return GetRuleContexts<ColumnIdentifierContext>();
		}
		public ColumnIdentifierContext columnIdentifier(int i) {
			return GetRuleContext<ColumnIdentifierContext>(i);
		}
		public ITerminalNode[] SORT_TYPE() { return GetTokens(htmlapiParser.SORT_TYPE); }
		public ITerminalNode SORT_TYPE(int i) {
			return GetToken(htmlapiParser.SORT_TYPE, i);
		}
		public SortFilterContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_sortFilter; } }
		public override void EnterRule(IParseTreeListener listener) {
			IhtmlapiListener typedListener = listener as IhtmlapiListener;
			if (typedListener != null) typedListener.EnterSortFilter(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IhtmlapiListener typedListener = listener as IhtmlapiListener;
			if (typedListener != null) typedListener.ExitSortFilter(this);
		}
	}

	[RuleVersion(0)]
	public SortFilterContext sortFilter() {
		SortFilterContext _localctx = new SortFilterContext(Context, State);
		EnterRule(_localctx, 10, RULE_sortFilter);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 74; Match(SORT);
			State = 75; columnIdentifier();
			State = 76; Match(SORT_TYPE);
			State = 83;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==T__0) {
				{
				{
				State = 77; Match(T__0);
				State = 78; columnIdentifier();
				State = 79; Match(SORT_TYPE);
				}
				}
				State = 85;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}


	public static readonly ATN _ATN =
		new ATNDeserializer().Deserialize(_serializedATN);


}
